Fixes #176 - clicking on image toggles between collapsed and full display

--- a/css/style.css
+++ b/css/style.css
@@ -157,13 +157,22 @@
         }
 
     #app-content-wrapper header {
+        display: block;
+        width: 100%;
+		text-align: center;
+        margin-bottom: 1rem;
+    }
+        #app-content-wrapper header.collapsed img {
+            cursor: pointer;
+            max-width: 100%;
+        }
+
+    #app-content-wrapper header.collapsed {
         flex-basis: 100%;
 		height: 40vh;
-		margin-bottom: 1rem;
 		overflow: hidden;
     }
-        #app-content-wrapper header img {
-            max-width: 100%;
+        #app-content-wrapper header.collapsed img {
 			margin: 0 auto;
 			margin-top: 20vh;
 			transform: translateY(-50%);
